--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,32 @@
     padding: 0;
 }
 
+#wrapper{
+    background-color: blue;
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    overflow:auto;
+}
+
+.title{
+    font-size: 40px;
+    font-family: sans-serif;
+    line-height: 50px;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    margin-top: 15%;
+}
+.title a{
+    color:white !important;
+}
+
+
 .navbar {
     background-color: blue;
-	color: #FFFFFF;
     height: 30px;
     width: 100%;
 	padding-top: 7px;
@@ -21,19 +44,37 @@ body {
     line-height: 26px;
 }
 
+/* This is the CHAPTERS in capitals */
+h1 {font-family: 'Noto Serif', serif;
+    font-size: 16px;
+    line-height: 24px ;
+    text-align: center;
+    font-style: italic;
+    font-weight: 400;
+    color: #1419FF;
+}
+
 /* This is the subttitle text */
-h1 {font-family: sans-serif;
+h2 {font-family: 'Noto Serif', serif;
     font-size: 16px;
 	line-height: 24px ;
     text-align: center;
     font-style: italic;
     font-weight: 400;
 }
-/* This is the references and footnotes */
-h2 {font-family: sans-serif;
+
+/* This small is white text */
+h3 {font-family: sans-serif;
     font-size: 12px;
     font-weight: lighter;
     line-height: 20px;
+    color:#ffffff;
+}
+
+/* images discription */
+h4 {
+    text-align: center;
+    font-size: 12px;
 }
 
 /* This is the running text */
@@ -45,10 +86,6 @@ h5 {font-family: 'Noto Serif', serif;
 h6 {
 }
 
-h4 {
-    text-align: center;
-    font-size: 12px;
-}
 
 .columns { 
     text-align: justify;
