--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
 /* This is the CHAPTERS in capitals */
 h1 {
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 24px ;
     text-align: left;
     font-weight: 600;
@@ -140,7 +140,7 @@ header {
 }
 
 a, a:hover, a:visited, a:active {
-    color: #1419FF;
+    color: violet;
     text-decoration: none;
     font-family: sans-serif;
     font-weight: 600;
