--- a/css/jquery.fancybox.css
+++ b/css/jquery.fancybox.css
@@ -64,6 +64,7 @@
 	display: block;
 	width: 100%;
 	height: 100%;
+	opacity: 0.95;
 }
 
 .fancybox-image {
@@ -197,7 +198,10 @@
 /* Title helper */
 
 .fancybox-title {
-	line-height: 18px;
+	font-family: sans-serif;
+	font-size: 11px;
+	font-weight: lighter;
+	line-height: 14px;
 	text-align: center;
 	visibility: hidden;
 	position: relative;
@@ -250,8 +254,7 @@
 	left: 0;
 	color: #fff;
 	padding: 10px;
-	background: #000;
-	background: rgba(0, 0, 0, .8);
+	background: blue;
 }
 
 /*Retina graphics!*/
