--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,25 @@
     padding: 0;
 }
 
+#bg {
+    opacity: 0.05;
+    z-index: -10;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    
+     /* Preserve aspet ratio */
+    min-width: 20%;
+    min-height: 20%;
+}
+
+body { 
+    font-family: 'Noto Serif', serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
 #wrapper{
     background-color: blue;
     position:absolute;
@@ -14,35 +33,20 @@
 }
 
 .title{
-    font-size: 40px;
-    font-family: sans-serif;
-    line-height: 50px;
-    margin-left: 10%;
+    font-size: 130px;
+    font-family:sans-serif;
+    line-height: 130px;
+    margin-left: 50px;
     margin-right: 10%;
-    text-align: center;
-    margin-top: 15%;
+    margin-top: 7px;
 }
 .title a{
     color:white !important;
-}
-
-/* ipad - portrait */
-@media screen and (max-width: 768px) {
-    .title {
-        font-size: 30px;
-        line-height: 35px;
-    } 
-}
-
-@media screen and (max-width: 36em) {
-    .title{
-         font-size: 20px;
-        line-height: 25px;
-    }
+    outline: 0;
 }
 
 .navbar {
-    background-color: blue;
+    background-color: black;
     height: 20px;
     width: 100%;
 	padding-top: 7px;
@@ -52,20 +56,13 @@
     left: 0;
 }
 
-body {
-    font-size: 12px;
-    font-family: sans-serif;
-    line-height: 26px;
-}
-
 /* This is the CHAPTERS in capitals */
-h1 {
-    font-family: sans-serif;
-    font-size: 14px;
-    line-height: 24px ;
+h1 {font-family: sans-serif;
+    font-size: 22px;
+    line-height: 28px ;
     text-align: left;
-    font-weight: 600;
-    color: blue;
+    font-weight: bold;
+    color: black;
 }
 
 /* This is the subttitle text */
@@ -84,21 +81,16 @@ h3 {font-family: sans-serif;
     color:#ffffff;
 }
 
-/* images discription */
+/* Intro tekst */
 h4 {
-    text-align: center;
-    font-size: 12p
-}
-
-/* This is the running text */
-h5 {font-family: 'Noto Serif', serif;
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-weight: bold;
+    color: blue;
 }
 
 h6 {
 }
-
 
 .columns { 
     text-align: justify;
@@ -120,8 +112,7 @@ h6 {
     position: fixed;
     left: 15px;
     top:0;
-    z-index: 10;
-    
+    z-index: 10;  
 }
 
 #right{
@@ -133,34 +124,25 @@ h6 {
     color:white !important;
 }
 
-header {
-    font-size: 16px;
-    text-align: center;
-    padding-top: 20px;
-}
-
 a, a:hover, a:visited, a:active {
-    color: violet;
+    color: lightblue;
     text-decoration: none;
-    font-family: sans-serif;
-    font-weight: 600;
+    font-family:sans-serif;
 }
 
-p {
-    margin-top: 0;
+/* ipad - portrait */
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 30px;
+        line-height: 35px;
+    } 
 }
 
-/* This makes the images scale to the full width of the page */
-
-img {
-    max-width: 50%;
-    height: auto;
-}
-
-@media {
-  img { 
-    width: auto; /* for ie 8 */
-  }
+@media screen and (max-width: 36em) {
+    .title{
+         font-size: 20px;
+        line-height: 25px;
+    }
 }
 
 @media only print  {
@@ -220,23 +202,10 @@ img {
     line-height: 16px;
     }
 
-   header {
-        font-size: 12px;
-		line-height: 18px;
-        margin-left: 16px;
-        margin-right: 16px;
-    } 
-
-    h1 {
-        font-size: 12px;
+    body {
+        font-size: 10px;
 		line-height: 18px;
     } 
-
-    h5 {
-    font-size: 12px;
-	line-height: 20px;
-}
-     
 }
 
 @media only print {
