--- a/css/jquery.fancybox.css
+++ b/css/jquery.fancybox.css
@@ -254,8 +254,7 @@
 	left: 0;
 	color: #fff;
 	padding: 10px;
-	background: #000;
-	background: rgba(0, 0, 0, .8);
+	background: blue;
 }
 
 /*Retina graphics!*/
