--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 body { 
     font-family: 'Noto Serif', serif;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 400;
     line-height: 26px;
 }
@@ -32,6 +32,35 @@ body {
     overflow:auto;
 }
 
+#content{}
+#content a{
+  text-decoration:none;
+  -webkit-transition: all 0.4s ease;
+     -moz-transition: all 0.4s ease;
+       -o-transition: all 0.4s ease;
+      -ms-transition: all 0.4s ease;
+          transition: all 0.4s ease;
+}
+#content a:hover{
+  text-decoration:none;
+  padding-left:10px;
+  -webkit-transition: all 0.4s ease;
+     -moz-transition: all 0.4s ease;
+       -o-transition: all 0.4s ease;
+      -ms-transition: all 0.4s ease;
+          transition: all 0.4s ease;
+}
+
+#one{}
+#two{}
+#three{}
+#four{}
+#five{}
+#six{}
+#seven{}
+#eight{}
+
+
 .title{
     font-size: 130px;
     font-family:sans-serif;
@@ -45,15 +74,6 @@ body {
     outline: 0;
 }
 
-/* ipad - portrait */
-@media screen and (max-width: 768px) {
-    .title {
-        font-size: 30px;
-        line-height: 35px;
-    } 
-}
-
-
 .navbar {
     background-color: black;
     height: 20px;
@@ -64,6 +84,9 @@ body {
     top: 0;
     left: 0;
 }
+span.ind{ margin-left: 40px; /* Or desired space*/}
+
+.tab { margin-left: 40px; }
 
 /* This is the CHAPTERS in capitals */
 h1 {font-family: sans-serif;
@@ -77,7 +100,6 @@ h1 {font-family: sans-serif;
 /* This is the subttitle text */
 h2 {font-family: sans-serif;
     font-size: 12px;
-	line-height: 24px ;
     font-style: italic;
     font-weight: 600;
 }
@@ -91,27 +113,23 @@ h3 {font-family: sans-serif;
 }
 
 /* Intro tekst */
-h4 {
-    font-size: 16px;
+h4 {font-size: 10px;
+    font-weight:lighter;
     font-family: sans-serif;
-    font-weight: bold;
     color: blue;
-    text-align: center;
-    font-size: 12p
-}
-
-/* This is the running text */
-h5 {font-family: 'Noto Serif', serif;
-    font-size: 14px;
-    font-weight: 400;
 }
 
 h6 {
+    font-family: sans-serif;
+    font-size: 22px;
+    line-height: 28px ;
+    text-align: left;
+    font-weight: bold;
+    color: black;
 }
 
 .columns { 
     text-align: justify;
-    text-justify: inter-word;
     height: 500px;
     -webkit-column-gap: 100px;
     -webkit-column-count: 2; /* Chrome, Safari, Opera */
@@ -130,19 +148,6 @@ h6 {
     left: 15px;
     top:0;
     z-index: 10;  
-    z-index: 10;  
-    z-index: 10;
-    
-    z-index: 10;
-    
-    z-index: 10;
-    
->>>>>>> FETCH_HEAD
-=======
-    z-index: 10;
-    
->>>>>>> FETCH_HEAD
->>>>>>> FETCH_HEAD
 }
 
 #right{
@@ -152,14 +157,17 @@ h6 {
 
 #left a, #right a{
     color:white !important;
-<<<<<<< HEAD
-<<<<<<< HEAD
 }
 
-a, a:hover, a:visited, a:active {
-    color: orange;
+a:hover {
+    background: orange;
+}
+
+a,  a:visited, a:active {
+    color: blue;
     text-decoration: none;
     font-family:sans-serif;
+    font-style: italic;
 }
 
 /* ipad - portrait */
@@ -168,36 +176,6 @@ a, a:hover, a:visited, a:active {
         font-size: 30px;
         line-height: 35px;
     } 
-=======
-=======
->>>>>>> FETCH_HEAD
-=======
->>>>>>> FETCH_HEAD
-=======
->>>>>>> FETCH_HEAD
-}
-
-a, a:hover, a:visited, a:active {
-    color: lightblue;
-    text-decoration: none;
-    font-family:sans-serif;
-}
-
-<<<<<<< HEAD
-/* ipad - portrait */
-@media screen and (max-width: 768px) {
-    .title {
-        font-size: 30px;
-        line-height: 35px;
-    } 
-=======
-/* This makes the images scale to the full width of the page */
-
-img {
-    max-width: 50%;
-    height: auto;
->>>>>>> FETCH_HEAD
->>>>>>> FETCH_HEAD
 }
 
 @media screen and (max-width: 36em) {
