--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
         }
         li:nth-of-type(1) a:hover:before {
             background-color: blue;
+        }
 
 #wrapper{
     background-color: blue;
