--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+*{ margin: 0; padding: 0; }
 
-body { 
-    background: lightblue;
-    font-family: 'Noto Serif', serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 25px;
-}
+body { font-family: 'Noto Serif', serif; font-size: 16px; font-weight: 400; line-height: 25px; }
 
-    a:hover:before {
-            content: '';
-            position: absolute;
-            display: block;
-            top: 0; bottom: 0; left: 0; right: 0;
-            z-index: -1;
-        }
-        li:nth-of-type(1) a:hover:before {
-            background-color: blue;
-        }
-
-
+/* index page*/
 #wrapper{
     background-color: blue;
     position:absolute;
@@ -46,17 +26,7 @@ body {
     outline: 0;
 }
 
-.navbar {
-    background-color: black;
-    height: 20px;
-    width: 100%;
-    padding-top: 7px;
-    padding-left:50px;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
+/* content page*/
 #content{}
 #content a{
   text-decoration:none;
@@ -85,7 +55,16 @@ body {
 #seven{}
 #eight{}
 
-
+.navbar {
+    background-color: black;
+    height: 20px;
+    width: 100%;
+	padding-top: 7px;
+    padding-left:50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 span.ind{ margin-left: 40px; /* Or desired space*/}
 
 .tab { margin-left: 40px; }
@@ -99,7 +78,7 @@ h1 {font-family: sans-serif;
     color: black;
 }
 
-/* This is the subttitle text */
+/* This is the subtitle text */
 h2 {font-family: sans-serif;
     font-size: 12px;
     font-style: italic;
@@ -114,20 +93,10 @@ h3 {font-family: sans-serif;
     color:#ffffff;
 }
 
-/* Intro tekst */
-h4 {font-size: 10px;
-    font-weight:lighter;
-    font-family: sans-serif;
-    color: blue;
-}
+/* Bronnen */
+h4 { font-size: 10px; font-weight:lighter; font-family: sans-serif; color: blue; }
 
-h6 {
-    font-family: sans-serif;
-    font-size: 22px;
-    line-height: 28px ;
-    text-align: left;
-    font-weight: bold;
-    color: black;
+h6 { 
 }
 
 .columns { 
@@ -159,6 +128,17 @@ h6 {
 
 #left a, #right a{
     color:white !important;
+}
+
+a:hover {
+    background: blue;
+}
+
+a,  a:visited, a:active {
+    color: blue;
+    text-decoration: none;
+    font-family:sans-serif;
+    font-style: italic;
 }
 
 /* ipad - portrait */
